kubernetes/namespace copy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medusa
  labels:
    name: medusa
    app: medusa-store
