kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medusa-store
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
