kubernetes/services.yaml
kind: Service
apiVersion: v1
metadata:
  name: example-redis-service
  namespace: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
